<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_advanced"
        android:title="@string/action_advanced_properties"
        android:icon="@drawable/ic_tune"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/context_action_favorite_add"
        android:icon="@drawable/ic_favorite_border"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:title="@string/context_action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save_as_new"
        android:title="@string/action_save_as_new"
        app:showAsAction="never" />
</menu>
