<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tilExtraKey,tilExtraValue"
        app:flow_wrapMode="aligned"
        app:flow_horizontalStyle="spread"
        app:flow_horizontalGap="4dp"
        app:flow_verticalGap="4dp"
        app:flow_verticalAlign="top"
        app:layout_constraintEnd_toStartOf="@+id/ibRemoveExtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilExtraKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_intent_extra_key"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiExtraKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilExtraValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_intent_extra_value"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiExtraValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/ibRemoveExtra"
        style="?attr/materialIconButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/context_action_favorite_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>
